src/test/deca/syntax/invalid/testInvalidClassName2.deca
// name a class using an invalid name
// Result : Error
// special character as a name
class #{

}
